--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "description": "",
   "devDependencies": {
     "gulp": "^5.0.0",
+    "gulp-autoprefixer": "^8.0.0",
+    "gulp-cssnano": "^2.1.3",
     "gulp-sass": "^5.1.0",
     "sass": "^1.77.8"
   }
