--- a/package.json
+++ b/package.json
@@ -10,9 +10,13 @@
   "license": "ISC",
   "description": "",
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.3",
     "gulp": "^5.0.0",
     "gulp-autoprefixer": "^8.0.0",
+    "gulp-babel": "^8.0.0",
     "gulp-cssnano": "^2.1.3",
+    "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.77.8"
   }
