--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "gulp-cssnano": "^2.1.3",
     "gulp-rename": "^2.0.0",
     "gulp-sass": "^5.1.0",
+    "gulp-uglify": "^3.0.2",
     "sass": "^1.77.8"
   }
 }
